// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index check connection - app auth missing 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "Invalid value for authentication.app_cfg.auth",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - app client invalid 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "Invalid app client configuration: client_id and client_secret are required",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - app client valid 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "status": "SUCCEEDED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - app installation invalid 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "Invalid app installation configuration: installation_id is required",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - app installation valid 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "status": "SUCCEEDED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - app invalid 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "Invalid app configuration: app_id, private_key and app_cfg are required",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - authentication missing 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "Invalid value for authentication.auth",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - token missing 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "Invalid token configuration: Personal access token is required",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - token valid 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "status": "SUCCEEDED",
  },
  "type": "CONNECTION_STATUS",
}
`;
